// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for annotating new file before upload 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="ui form"
      >
        <div
          class="required field"
        >
          <label
            for="file_name"
          >
            Document Title:
          </label>
          <input
            data-testid="name-input"
            name="file_name"
            placeholder="Phenotypic Data manifest for..."
            type="text"
            value=""
          />
          <small>
            Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
          </small>
        </div>
        <div
          class="required field"
        >
          <label
            for="file_type"
          >
            Document Type:
          </label>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="DBG"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="DBG"
                  />
                  <i
                    aria-hidden="true"
                    class="black file alternate large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    dbGaP Submission File
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  A document formatted to the dbGaP submission specification for uploading to dbGaP during a new release.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="OTH"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="OTH"
                  />
                  <i
                    aria-hidden="true"
                    class="black question large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Other
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="SEQ"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="SEQ"
                  />
                  <i
                    aria-hidden="true"
                    class="black dna large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Sequencing File Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular file (e.g. CSV, TSV, Excel) containing the aliquot identifiers, associated sequencing experiment parameters, and the associated sequencing files. Typically provided by the sequencing center.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="S3S"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="S3S"
                  />
                  <i
                    aria-hidden="true"
                    class="black aws large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    S3 Scrapes
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Generated S3 bucket inventories.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="PDA"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="PDA"
                  />
                  <i
                    aria-hidden="true"
                    class="black clipboard list large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Participant Details
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing demographic and administrative attributes for participants in the study
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="PTD"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="PTD"
                  />
                  <i
                    aria-hidden="true"
                    class="black ambulance large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Participant Diseases
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing attributes pertaining to the diagnosed diseases of participants in the study
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="PTP"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="PTP"
                  />
                  <i
                    aria-hidden="true"
                    class="black eye large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Participant Phenotypes
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing attributes pertaining to the observed phenotypes of participants in the study.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="FCM"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="FCM"
                  />
                  <i
                    aria-hidden="true"
                    class="black hubspot large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Complex Family
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing arbitrary family relationships captured as source &lt;- relationship label -&gt; target records
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="FTR"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="FTR"
                  />
                  <i
                    aria-hidden="true"
                    class="black users large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Family Trio
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing relationships for simple, mother-father-participant families
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="GWO"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="GWO"
                  />
                  <i
                    aria-hidden="true"
                    class="black dna large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Genomic Workflow Output Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Metadata about harmonized files produced from Bix genomic workflows
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="GOB"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="GOB"
                  />
                  <i
                    aria-hidden="true"
                    class="black file large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    General Observations
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  This file is a catch-all for any attributes about a participant that cannot adequately be captured in any of the other file types. The fields here are based on the FHIR Observation resource which is defined as "simple name/value pair assertions with some metadata, but some observations group other observations together logically, or even are multi-component observations". Observations can include vital signs, laboratory data, environment exposure, survey data and/or other clinical assessments. The DRC team can help advise on how best to represent your data as observations when needed.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="ALM"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="ALM"
                  />
                  <i
                    aria-hidden="true"
                    class="black file large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Aliquot Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  The fields in this file may seem like they could/should be part of one of the other specimen templates. The reason why this information is in its own template is because sometimes it is produced by the research PI and other times it is produced by the sequencing center. In the former case, the research PI (or an associated lab) has taken ownership over portioning the specimens into aliquots and creating the inventory of specimens, aliquots, and analyte types before they are sent for sequencing. In the latter case, the sequencing center may spin out the analyte types to create the aliquots, in which case it becomes the single source of truth for specimens and aliquots.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="BBM"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="BBM"
                  />
                  <i
                    aria-hidden="true"
                    class="black file large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Biobank Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  This file is expected to be supplied by a Biobank and contains information about the storage state of the specimen and/or its aliquots (if they exist) in the Biobank. The information in this file will be useful when it is indexed and used in searching for available specimens for sequencing.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="BCM"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="BCM"
                  />
                  <i
                    aria-hidden="true"
                    class="black file large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Biospecimen Collection Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  This file is expected to be supplied by the research PI and contains the most common and critical information about the collection of the specimen such as its basic biological characteristics (e.g. composition, anatomical site), consenting information, and (if applicable) specimen grouping information (not to be confused with aliquots). 
                </p>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="ui form"
    >
      <div
        class="required field"
      >
        <label
          for="file_name"
        >
          Document Title:
        </label>
        <input
          data-testid="name-input"
          name="file_name"
          placeholder="Phenotypic Data manifest for..."
          type="text"
          value=""
        />
        <small>
          Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
        </small>
      </div>
      <div
        class="required field"
      >
        <label
          for="file_type"
        >
          Document Type:
        </label>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="DBG"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="DBG"
                />
                <i
                  aria-hidden="true"
                  class="black file alternate large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  dbGaP Submission File
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                A document formatted to the dbGaP submission specification for uploading to dbGaP during a new release.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="OTH"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="OTH"
                />
                <i
                  aria-hidden="true"
                  class="black question large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Other
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="SEQ"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="SEQ"
                />
                <i
                  aria-hidden="true"
                  class="black dna large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Sequencing File Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular file (e.g. CSV, TSV, Excel) containing the aliquot identifiers, associated sequencing experiment parameters, and the associated sequencing files. Typically provided by the sequencing center.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="S3S"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="S3S"
                />
                <i
                  aria-hidden="true"
                  class="black aws large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  S3 Scrapes
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Generated S3 bucket inventories.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="PDA"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="PDA"
                />
                <i
                  aria-hidden="true"
                  class="black clipboard list large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Participant Details
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing demographic and administrative attributes for participants in the study
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="PTD"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="PTD"
                />
                <i
                  aria-hidden="true"
                  class="black ambulance large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Participant Diseases
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing attributes pertaining to the diagnosed diseases of participants in the study
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="PTP"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="PTP"
                />
                <i
                  aria-hidden="true"
                  class="black eye large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Participant Phenotypes
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing attributes pertaining to the observed phenotypes of participants in the study.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="FCM"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="FCM"
                />
                <i
                  aria-hidden="true"
                  class="black hubspot large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Complex Family
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing arbitrary family relationships captured as source &lt;- relationship label -&gt; target records
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="FTR"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="FTR"
                />
                <i
                  aria-hidden="true"
                  class="black users large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Family Trio
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing relationships for simple, mother-father-participant families
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="GWO"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="GWO"
                />
                <i
                  aria-hidden="true"
                  class="black dna large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Genomic Workflow Output Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Metadata about harmonized files produced from Bix genomic workflows
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="GOB"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="GOB"
                />
                <i
                  aria-hidden="true"
                  class="black file large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  General Observations
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                This file is a catch-all for any attributes about a participant that cannot adequately be captured in any of the other file types. The fields here are based on the FHIR Observation resource which is defined as "simple name/value pair assertions with some metadata, but some observations group other observations together logically, or even are multi-component observations". Observations can include vital signs, laboratory data, environment exposure, survey data and/or other clinical assessments. The DRC team can help advise on how best to represent your data as observations when needed.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="ALM"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="ALM"
                />
                <i
                  aria-hidden="true"
                  class="black file large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Aliquot Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                The fields in this file may seem like they could/should be part of one of the other specimen templates. The reason why this information is in its own template is because sometimes it is produced by the research PI and other times it is produced by the sequencing center. In the former case, the research PI (or an associated lab) has taken ownership over portioning the specimens into aliquots and creating the inventory of specimens, aliquots, and analyte types before they are sent for sequencing. In the latter case, the sequencing center may spin out the analyte types to create the aliquots, in which case it becomes the single source of truth for specimens and aliquots.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="BBM"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="BBM"
                />
                <i
                  aria-hidden="true"
                  class="black file large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Biobank Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                This file is expected to be supplied by a Biobank and contains information about the storage state of the specimen and/or its aliquots (if they exist) in the Biobank. The information in this file will be useful when it is indexed and used in searching for available specimens for sequencing.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="BCM"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="BCM"
                />
                <i
                  aria-hidden="true"
                  class="black file large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Biospecimen Collection Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                This file is expected to be supplied by the research PI and contains the most common and critical information about the collection of the specimen such as its basic biological characteristics (e.g. composition, anatomical site), consenting information, and (if applicable) specimen grouping information (not to be confused with aliquots). 
              </p>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders correctly for editing existing file 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="ui form"
      >
        <div
          class="required field"
        >
          <label
            for="file_name"
          >
            Document Title:
          </label>
          <input
            data-testid="name-input"
            name="file_name"
            placeholder="Phenotypic Data manifest for..."
            type="text"
            value="Existing File Name"
          />
          <small>
            Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
          </small>
        </div>
        <div
          class="field"
        >
          <label>
            Approval Status:
          </label>
          <div
            aria-expanded="false"
            class="ui fluid selection dropdown"
            name="file_status"
            role="listbox"
            tabindex="0"
          >
            <div
              aria-atomic="true"
              aria-live="polite"
              class="text"
              role="alert"
            >
              Pending review
            </div>
            <i
              aria-hidden="true"
              class="dropdown icon"
            />
            <div
              class="menu transition"
            >
              <div
                aria-checked="true"
                aria-selected="true"
                class="active selected item"
                role="option"
                style="pointer-events: all;"
              >
                <div
                  class="ui orange tiny basic label text"
                >
                  Pending review
                </div>
              </div>
              <div
                aria-checked="false"
                aria-selected="false"
                class="item"
                role="option"
                style="pointer-events: all;"
              >
                <div
                  class="ui teal tiny basic label text"
                >
                  Approved
                </div>
              </div>
              <div
                aria-checked="false"
                aria-selected="false"
                class="item"
                role="option"
                style="pointer-events: all;"
              >
                <div
                  class="ui red tiny basic label text"
                >
                  Changes needed
                </div>
              </div>
              <div
                aria-checked="false"
                aria-selected="false"
                class="item"
                role="option"
                style="pointer-events: all;"
              >
                <div
                  class="ui blue tiny basic label text"
                >
                  Processed
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="required field"
        >
          <label
            for="file_type"
          >
            Document Type:
          </label>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="DBG"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="DBG"
                  />
                  <i
                    aria-hidden="true"
                    class="black file alternate large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    dbGaP Submission File
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  A document formatted to the dbGaP submission specification for uploading to dbGaP during a new release.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="OTH"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="OTH"
                  />
                  <i
                    aria-hidden="true"
                    class="black question large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Other
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="SEQ"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="SEQ"
                  />
                  <i
                    aria-hidden="true"
                    class="black dna large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Sequencing File Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular file (e.g. CSV, TSV, Excel) containing the aliquot identifiers, associated sequencing experiment parameters, and the associated sequencing files. Typically provided by the sequencing center.
                </p>
              </div>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="S3S"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="S3S"
                  />
                  <i
                    aria-hidden="true"
                    class="black aws large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    S3 Scrapes
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Generated S3 bucket inventories.
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="PDA"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="PDA"
                  />
                  <i
                    aria-hidden="true"
                    class="black clipboard list large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Participant Details
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing demographic and administrative attributes for participants in the study
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="PTD"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="PTD"
                  />
                  <i
                    aria-hidden="true"
                    class="black ambulance large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Participant Diseases
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing attributes pertaining to the diagnosed diseases of participants in the study
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="PTP"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="PTP"
                  />
                  <i
                    aria-hidden="true"
                    class="black eye large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Participant Phenotypes
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing attributes pertaining to the observed phenotypes of participants in the study.
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="FCM"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="FCM"
                  />
                  <i
                    aria-hidden="true"
                    class="black hubspot large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Complex Family
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing arbitrary family relationships captured as source &lt;- relationship label -&gt; target records
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="FTR"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="FTR"
                  />
                  <i
                    aria-hidden="true"
                    class="black users large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Family Trio
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Tabular files (e.g. CSV, TSV, Excel) containing relationships for simple, mother-father-participant families
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="GWO"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="GWO"
                  />
                  <i
                    aria-hidden="true"
                    class="black dna large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Genomic Workflow Output Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  Metadata about harmonized files produced from Bix genomic workflows
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="GOB"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="GOB"
                  />
                  <i
                    aria-hidden="true"
                    class="black file large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    General Observations
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  This file is a catch-all for any attributes about a participant that cannot adequately be captured in any of the other file types. The fields here are based on the FHIR Observation resource which is defined as "simple name/value pair assertions with some metadata, but some observations group other observations together logically, or even are multi-component observations". Observations can include vital signs, laboratory data, environment exposure, survey data and/or other clinical assessments. The DRC team can help advise on how best to represent your data as observations when needed.
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="ALM"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="ALM"
                  />
                  <i
                    aria-hidden="true"
                    class="black file large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Aliquot Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  The fields in this file may seem like they could/should be part of one of the other specimen templates. The reason why this information is in its own template is because sometimes it is produced by the research PI and other times it is produced by the sequencing center. In the former case, the research PI (or an associated lab) has taken ownership over portioning the specimens into aliquots and creating the inventory of specimens, aliquots, and analyte types before they are sent for sequencing. In the latter case, the sequencing center may spin out the analyte types to create the aliquots, in which case it becomes the single source of truth for specimens and aliquots.
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="BBM"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="BBM"
                  />
                  <i
                    aria-hidden="true"
                    class="black file large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Biobank Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  This file is expected to be supplied by a Biobank and contains information about the storage state of the specimen and/or its aliquots (if they exist) in the Biobank. The information in this file will be useful when it is indexed and used in searching for available specimens for sequencing.
                </p>
              </div>
            </div>
          </div>
          <div
            class="disabled field"
          >
            <div
              class="ui compact segment selectionRadio--card"
            >
              <div>
                <div
                  class="ui radio checkbox"
                >
                  <input
                    class="hidden"
                    id="BCM"
                    name="file_type"
                    readonly=""
                    tabindex="0"
                    type="radio"
                    value="BCM"
                  />
                  <i
                    aria-hidden="true"
                    class="black file large bordered circular inverted icon"
                  />
                </div>
              </div>
              <div>
                <p
                  class="mb-5"
                >
                  <b>
                    Biospecimen Collection Manifest
                  </b>
                </p>
                <p
                  class="text-wrap-75 text-grey"
                >
                  This file is expected to be supplied by the research PI and contains the most common and critical information about the collection of the specimen such as its basic biological characteristics (e.g. composition, anatomical site), consenting information, and (if applicable) specimen grouping information (not to be confused with aliquots). 
                </p>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="ui form"
    >
      <div
        class="required field"
      >
        <label
          for="file_name"
        >
          Document Title:
        </label>
        <input
          data-testid="name-input"
          name="file_name"
          placeholder="Phenotypic Data manifest for..."
          type="text"
          value="Existing File Name"
        />
        <small>
          Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
        </small>
      </div>
      <div
        class="field"
      >
        <label>
          Approval Status:
        </label>
        <div
          aria-expanded="false"
          class="ui fluid selection dropdown"
          name="file_status"
          role="listbox"
          tabindex="0"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            class="text"
            role="alert"
          >
            Pending review
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="true"
              aria-selected="true"
              class="active selected item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui orange tiny basic label text"
              >
                Pending review
              </div>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui teal tiny basic label text"
              >
                Approved
              </div>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui red tiny basic label text"
              >
                Changes needed
              </div>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <div
                class="ui blue tiny basic label text"
              >
                Processed
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="required field"
      >
        <label
          for="file_type"
        >
          Document Type:
        </label>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="DBG"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="DBG"
                />
                <i
                  aria-hidden="true"
                  class="black file alternate large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  dbGaP Submission File
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                A document formatted to the dbGaP submission specification for uploading to dbGaP during a new release.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="OTH"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="OTH"
                />
                <i
                  aria-hidden="true"
                  class="black question large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Other
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="SEQ"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="SEQ"
                />
                <i
                  aria-hidden="true"
                  class="black dna large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Sequencing File Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular file (e.g. CSV, TSV, Excel) containing the aliquot identifiers, associated sequencing experiment parameters, and the associated sequencing files. Typically provided by the sequencing center.
              </p>
            </div>
          </div>
        </div>
        <div
          class="field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="S3S"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="S3S"
                />
                <i
                  aria-hidden="true"
                  class="black aws large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  S3 Scrapes
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Generated S3 bucket inventories.
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="PDA"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="PDA"
                />
                <i
                  aria-hidden="true"
                  class="black clipboard list large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Participant Details
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing demographic and administrative attributes for participants in the study
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="PTD"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="PTD"
                />
                <i
                  aria-hidden="true"
                  class="black ambulance large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Participant Diseases
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing attributes pertaining to the diagnosed diseases of participants in the study
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="PTP"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="PTP"
                />
                <i
                  aria-hidden="true"
                  class="black eye large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Participant Phenotypes
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing attributes pertaining to the observed phenotypes of participants in the study.
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="FCM"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="FCM"
                />
                <i
                  aria-hidden="true"
                  class="black hubspot large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Complex Family
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing arbitrary family relationships captured as source &lt;- relationship label -&gt; target records
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="FTR"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="FTR"
                />
                <i
                  aria-hidden="true"
                  class="black users large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Family Trio
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Tabular files (e.g. CSV, TSV, Excel) containing relationships for simple, mother-father-participant families
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="GWO"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="GWO"
                />
                <i
                  aria-hidden="true"
                  class="black dna large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Genomic Workflow Output Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                Metadata about harmonized files produced from Bix genomic workflows
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="GOB"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="GOB"
                />
                <i
                  aria-hidden="true"
                  class="black file large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  General Observations
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                This file is a catch-all for any attributes about a participant that cannot adequately be captured in any of the other file types. The fields here are based on the FHIR Observation resource which is defined as "simple name/value pair assertions with some metadata, but some observations group other observations together logically, or even are multi-component observations". Observations can include vital signs, laboratory data, environment exposure, survey data and/or other clinical assessments. The DRC team can help advise on how best to represent your data as observations when needed.
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="ALM"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="ALM"
                />
                <i
                  aria-hidden="true"
                  class="black file large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Aliquot Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                The fields in this file may seem like they could/should be part of one of the other specimen templates. The reason why this information is in its own template is because sometimes it is produced by the research PI and other times it is produced by the sequencing center. In the former case, the research PI (or an associated lab) has taken ownership over portioning the specimens into aliquots and creating the inventory of specimens, aliquots, and analyte types before they are sent for sequencing. In the latter case, the sequencing center may spin out the analyte types to create the aliquots, in which case it becomes the single source of truth for specimens and aliquots.
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="BBM"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="BBM"
                />
                <i
                  aria-hidden="true"
                  class="black file large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Biobank Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                This file is expected to be supplied by a Biobank and contains information about the storage state of the specimen and/or its aliquots (if they exist) in the Biobank. The information in this file will be useful when it is indexed and used in searching for available specimens for sequencing.
              </p>
            </div>
          </div>
        </div>
        <div
          class="disabled field"
        >
          <div
            class="ui compact segment selectionRadio--card"
          >
            <div>
              <div
                class="ui radio checkbox"
              >
                <input
                  class="hidden"
                  id="BCM"
                  name="file_type"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value="BCM"
                />
                <i
                  aria-hidden="true"
                  class="black file large bordered circular inverted icon"
                />
              </div>
            </div>
            <div>
              <p
                class="mb-5"
              >
                <b>
                  Biospecimen Collection Manifest
                </b>
              </p>
              <p
                class="text-wrap-75 text-grey"
              >
                This file is expected to be supplied by the research PI and contains the most common and critical information about the collection of the specimen such as its basic biological characteristics (e.g. composition, anatomical site), consenting information, and (if applicable) specimen grouping information (not to be confused with aliquots). 
              </p>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
